--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -19,6 +19,7 @@
           "options": {
             "outputPath": "dist/frontend",
             "index": "src/index.html",
+            "test": "src/test.ts",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
@@ -80,8 +81,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
